Fixed the alignment issue.

--- a/app/styles/components/class/_gru-student-class-activity-panel.scss
+++ b/app/styles/components/class/_gru-student-class-activity-panel.scss
@@ -6,7 +6,7 @@
   .ca-panel-container {
     display: inline-grid;
     width: 100%;
-    grid-template-columns: 1fr auto 50px 40px;
+    grid-template-columns: 1fr auto 50px 60px;
     height: 60px;
 
     &.offline {
